# notion_app

./: Makefile  pyproject.toml  setup.sh
src/notion_app/app/: home_page.py  navigation_page.py  page_1.py
src/notion_app/notebooks/: scratch.ipynb
